# opencv_test

./: CMakeLists.txt  car_vision.cpp  car_vision.h  carfinder.cpp  carfinder.h  control_gui.cpp  control_gui.h  main.cpp  main.h  pathfinder.cpp
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  gdbimagewatch.cfg  opencv_test  opencv_test.cbp
myheaders/: pathfinder.h
qtd/: CMakeCache.txt  Makefile  cmake_install.cmake  opencv_test  opencv_test.cbp
